resources/k8s/kustomize/openpom/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: openpom-app
    namespace: openpom
spec:
    replicas: 1
    selector:
        matchLabels:
            app: openpom-app
    template:
        metadata:
            labels:
                app: openpom-app
        spec:
            nodeSelector:
                cloud.google.com/gke-accelerator: nvidia-tesla-t4
                cloud.google.com/gke-accelerator-count: '1'
            containers:
                - name: openpom
                  image: ''
                  ports:
                      - containerPort: 8000
                  resources:
                      requests:
                          nvidia.com/gpu: 1
                      limits:
                          nvidia.com/gpu: 1
