resources/k8s/kustomize/openpom/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: openpom-service
    namespace: openpom
spec:
    selector:
        app: openpom-app
    ports:
        - name: http
          port: 80
          targetPort: 8000
    type: ClusterIP
